2009-03-08 Gustaf Neumann <neumann@wu-wien.ac.at>
        * Fix of two bugs with nsproxy:

          a) The initialize Tcl to avoid crash with Tcl8.5, when the
             nsproxy binary is started (see
             http://groups.google.com/group/aolserver/browse_thread/thread/28113c5324a6747e)

          b) Truncate name of proxy_id to avoid buffer overflows,
             increase allowed length of proxy name from 16 to 64 (and
             provide constant MAX_PROXY_ID_LEN to ease maintenance)

2009-02-01 Gustaf Neumann <neumann@wu-wien.ac.at>

	*** AOLserver 4.5.1 RELEASED ***

2009-02-01 Gustaf Neumann <neumann@wu-wien.ac.at>

        * nsd/pools.c:

2009-02-01 tag aolserver_v45_r1


2009-01-29 Gustaf Neumann <neumann@wu-wien.ac.at>
        * nsd/pools.c:
          Fixed error message for 'ns_pools set' command

        * nsd/tclcache.c: Fixed behavior such that 'return' in
          'ns_cache eval' works like described in the documentation
          and in the old nscache module. Example:

            ns_cache eval mycache mykey { return [expr {1+1}] }

          Before, 'return' raised a tcl error.

	* doc/ns_cache.n: added documentation of optional 'pattern'
          argument for 'ns_cache names'.

        * Updated Changelog.

2009-01-29 Gustaf Neumann  neumann@wu-wien.ac.at
	* nsssl/ssltcl.c:
	  Remove direct access to interp->result

        * Changelog: Completed Changelog entries from commits after
          the 4.5.0 release.

2009-01-19 Gustaf Neumann  neumann@wu-wien.ac.at

	* tcl/fastpath.tcl,
	* tcl/file.tcl:
	* tcl/form.tcl:
	* tcl/http.tcl:
	* tcl/nsdb.tcl:
	* tcl/packages.tcl:
	* tcl/sendmail.tcl: Use Tcl 8.4 non-numeric comparison
	  operators where appropriate

2008-12-27 Gustaf Neumann  neumann@wu-wien.ac.at

	* nsd/nsd.h:
	* nsd/pools.c:
	* nsd/queue.c:
	* tcl/pools.tcl:
          New configure parameter "spread" for ns_pools:    
	
          Background: Requests are distributed to idle threads via